trying different background

--- a/assets/style.css
+++ b/assets/style.css
@@ -16,7 +16,7 @@ span {
  }
 
  body {
-	background-image: url("images/trooper.jpg");
+	background-image: url("images/background.jpg");
 	font-family: 'Poller One', cursive;
    background-position: auto;
    background-repeat: no-repeat;
