--- a/assets/style.css
+++ b/assets/style.css
@@ -82,7 +82,7 @@ footer {
 @media screen and (max-width: 768px) {
   /* The body's bg color will be #333 */
   body {
-    background-image: url("images/background2s.jpg");
+    background-image: url("images/background2.jpg");
     background-position: auto;
     background-repeat: no-repeat;
     color: #ceebfd;
